# budget_backend_ocaml

./: .gitignore  .ocamlformat  .sops.yaml  AGENTS.md  BUILD_ERRORS.txt  README.md  TESTING.md  WEBHOOKS.md  aider_observations.md  default.nix  dune-project  flake.nix  nixos-module.nix  secrets.yaml  test  test.cmi  test.cmo  test.ml
lib/: db.ml  dune  plaid.ml  plaid_event.ml  plaid_event_publisher.ml  plaid_handler.ml  plaid_notifier.ml  plaid_webhook.ml  session_store.ml
src/: dune  main.ml  plaid_handler.ml
